--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <li>Debug Ruby Labs
     <li>Massage Joe's Back</ul>
     <li>Archive Steph's Gif collection<ul>
-    <li>Take out trash</ul>
+    <li>Take out trash
   </ul>
 
-  <h2 Issue Bot Camera Capture Archive</h2>
+  <h2>Issue Bot Camera Capture Archive</h2>
 
   <img src="images/adam.jpg">
   <img src="images/adam.jpg" alt="Avi">
